fixing title overlap with cover paragraph glitch

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -372,10 +372,10 @@ a {
   width: 40vw;
   padding: 2vh 2vw;
   text-align: justify;
-  font-size: 1.7vw;
+  font-size: 1.6vw;
   font-family: Caveat;
   position: absolute;
-  bottom: 20%;
+  bottom: 25%;
   left: -40vw;
   height: 0;
   border-radius: 0 30vh 30vh 0;
